<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_record_entry" />

    <Button
        android:id="@+id/btn_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_show_list" />

    <Button
        android:id="@+id/btn_journal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_member" />

</LinearLayout>
